examples/type_system/failing/45_effect_row_subtract_missing_io.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors, 1 note • examples/type_system/failing/45_effect_row_subtract_missing_io.flx
// error[E300]: Parameter Type Mismatch
//
// Parameter 1 has the wrong type.
//
//   examples/type_system/failing/45_effect_row_subtract_missing_io.flx:66:5
//    |
// 66 |     run_with_row(io_only)
//    |     ^^^^^^^^^^^^^^^^^^^^^
//    |     --------------------- parameter 1 has type `() -> Unit with Console, FileSystem, Stdin`
//
//    |     --------------------- this type mismatch is reported here
//
// Note:
//   expected parameter type: () -> Unit with FileSystem, Stdin
//   found parameter type: () -> Unit with Console, FileSystem, Stdin
//   the conflicting types meet at this expression
//
// Help:
//   Change parameter 1 to use `() -> Unit with FileSystem, Stdin` consistently.
//
//
// error[E400]: Missing Effect
//
// requires effect `FileSystem` but the enclosing context does not provide it
//
//   examples/type_system/failing/45_effect_row_subtract_missing_io.flx:66:5
//    |
// 66 |     run_with_row(io_only)
//    |     ^^^^^^^^^^^^^^^^^^^^^
//    |     --------------------- requires `FileSystem`
//
// Hint:
//   annotate the enclosing function with `with FileSystem`
//
//
// Note: Downstream Errors Suppressed
//
// I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300
// expect-error: E400

// E400: subtraction syntax still requires remaining row effects (IO).

effect Console {
    print: String -> ()
}

fn run_with_row(f: (() -> Int with IO + Console - Console)) -> Int with IO + Console - Console {
    f()
}

fn io_only() -> Int with IO {
    print("io")
    1
}

fn caller() -> Int with Time {
    run_with_row(io_only)
}

fn main() with IO, Time {
    print(to_string(caller()))
}
